<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appetit.presentation.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_recipeFragment"
            app:destination="@id/recipeFragment" />
        <action
            android:id="@+id/action_navigation_home_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.appetit.presentation.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_recipeFragment"
            app:destination="@id/recipeFragment" />
        <action
            android:id="@+id/action_navigation_search_to_filtersFragment"
            app:destination="@id/filtersFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_random"
        android:name="com.example.appetit.presentation.fragments.RandomFragment"
        android:label="@string/title_random"
        tools:layout="@layout/fragment_random">
        <action
            android:id="@+id/action_navigation_random_to_recipeFragment"
            app:destination="@id/recipeFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.appetit.presentation.fragments.RecipeFragment"
        android:label="fragment_recipe"
        tools:layout="@layout/fragment_recipe">
        <argument
            android:name="uri"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/filtersFragment"
        android:name="com.example.appetit.presentation.fragments.FiltersFragment"
        android:label="fragment_filters"
        tools:layout="@layout/fragment_filters">
        <action
            android:id="@+id/action_filtersFragment_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.appetit.presentation.fragments.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_recipeFragment"
            app:destination="@id/recipeFragment" />
    </fragment>
</navigation>