<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:background="@drawable/rounded_background">

    <FrameLayout
        android:id="@+id/posterImageLayout"
        android:layout_width="130dp"
        android:layout_height="160dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_background"
            android:clipToOutline="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_background_with_stroke" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/typeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/posterImageLayout"
        app:layout_constraintTop_toTopOf="@+id/posterImageLayout"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/labelTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_font"
            android:textAlignment="textStart"
            android:textColor="@color/onSurfaceColor"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/cuisineTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_font"
            android:text="@string/cuisine"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/onSurfaceColor"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/cuisineTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:fontFamily="@font/lora_font"
            android:textAlignment="textStart"
            android:textColor="@color/onSurfaceColor"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/mealTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_font"
            android:text="@string/meal"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/onSurfaceColor"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/mealTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:fontFamily="@font/lora_font"
            android:textAlignment="textStart"
            android:textColor="@color/onSurfaceColor"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/dishTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_font"
            android:text="@string/dish"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/onSurfaceColor"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/dishTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/lora_font"
            android:textAlignment="textStart"
            android:textColor="@color/onSurfaceColor"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/tagsTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora_italic_font"
        android:lineSpacingExtra="4sp"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        android:textStyle="normal"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora_italic_font"
        android:lineSpacingExtra="4sp"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        android:textStyle="normal"
        android:text="455"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:ellipsize="end"/>
</androidx.constraintlayout.widget.ConstraintLayout>
