<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/favoriteStoriesLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/gradient_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/willBeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/your_favorite_recipes_will_be_here"
            android:fontFamily="@font/lora_italic_font"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/onPrimaryColor"
            android:textSize="16sp"
            android:textAlignment="center"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:listitem="@layout/item_favorite_story"
            tools:itemCount="5"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/noResultsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="16dp"
        android:layout_margin="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/noResultsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_error"
            android:visibility="visible"
            android:textColor="@color/onErrorColor"
            android:background="@color/errorColor"
            android:fontFamily="@font/lora_font"
            android:shadowRadius="16"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="16dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/themeSwitchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/favoriteStoriesLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/surfaceColor"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Change theme:"
                android:textColor="@color/secondaryColor"
                android:textSize="22sp"
                android:fontFamily="@font/lora_italic_font"
                android:textStyle="bold"/>

            <Switch
                android:id="@+id/themeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/onSurfaceColor"
                android:thumbTint="@color/primaryColor"
                android:trackTint="@color/primaryColorVariant"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/randomRecipesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/themeSwitchLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/surfaceColor"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/randomRecipesTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_recipes"
                android:textColor="@color/secondaryColor"
                android:textSize="22sp"
                android:fontFamily="@font/lora_italic_font"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/randomRecyclerView"
                android:layout_marginVertical="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="170dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_recipe"
            tools:itemCount="5"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
